--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <h1>Verwarming</h1>
-<app-status></app-status>
-<hr>
+<!-- <app-status></app-status> 
+<hr>-->
 <nav>
-  <a routerLink="/manual">Manual override</a>
-  <a routerLink="/schedule">Schedule</a>
+  <a routerLink="/manual">Handmatige override</a>
+  <a routerLink="/schedule">Taken</a>
 </nav>
 <p></p>
 <router-outlet></router-outlet>
