--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 <!-- <app-status></app-status> 
 <hr>-->
 <nav>
-  <a routerLink="/manual">Handmatige override</a>
-  <a routerLink="/schedule">Taken</a>
+  <a routerLink="/manual" routerLinkActive="active-link">Handmatige override</a>
+  <a routerLink="/schedule" routerLinkActive="active-link">Taken</a>
 </nav>
 <p></p>
 <router-outlet></router-outlet>
