--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,4 +1,3 @@
-<h2>Taken</h2>
 <mat-card>
   <mat-card-content>
     <h2>Huidige taken</h2>
@@ -26,7 +25,7 @@
         </button>
       </label>
 
-      {{msg}}
+      {{ msg | async }}
     </section>
   </mat-card-content>
 </mat-card>
