--- a/src/styles.css
+++ b/src/styles.css
@@ -70,8 +70,8 @@ h1 {
     color: #039be5;
     background-color: #CFD8DC;
   }
-  nav a.active {
-    color: #039be5;
+  nav a.active-link {
+        font-weight: bold;
   }
   
   /* everywhere else */
