--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>Verwarming</h1>
-<!-- <app-status></app-status> 
-<hr>-->
+<app-status></app-status> 
+<hr>
 <nav>
   <a routerLink="/manual" routerLinkActive="active-link">Handmatige override</a>
   <a routerLink="/schedule" routerLinkActive="active-link">Taken</a>
