--- a/src/app/manual-override/manual-override.component.html
+++ b/src/app/manual-override/manual-override.component.html
@@ -1,9 +1,8 @@
-<!-- <button (click)="onClickToggle2()">Toggle permanent</button> -->
 <mat-card>
   <mat-card-content>
     <h2>Huidige instelling aanpassen</h2>
     <section class="example-section">
-      Tijdelijke override
+      Huidige status
       <mat-slide-toggle (change)="temporaryOverrideSliderToggle()" class="example-margin" [disabled]=(slidersDisabled)
         [(ngModel)]="temporaryOverrideSliderChecked">
       </mat-slide-toggle>
