--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -12,14 +12,26 @@
     <h2>Nieuwe taak</h2>
     <section class="example-section">
       <label>
+        Dag:
+        <select class="form-control" id="exampleCategory" required [(ngModel)]="newTask.dayOfWeek">
+          <!--<option></option>-->
+          <option *ngFor="let category of categoryTypes" [ngValue]="category">{{category.type}}</option>
+        </select>
+        <br>
+
+        <!--selectedCategoryType :  {{newTask.dayOfWeek | json}}-->
+
+        <br>
+        <br>
+
         Tijd (hh:mm):
         <input #time="ngModel" type="text" required pattern="^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$" [(ngModel)]="newTask.datetime">
         <span style="color:red" [hidden]="time.valid || time.pristine">Formaat ongeldig</span>
+
         <br>
         <br>
 
         Aan/uit: <input type="checkbox" [(ngModel)]="newTask.action" /><br>
-
         <button [disabled]="!time.valid" (click)="add(); time.value=''">
           add
         </button>
