--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -13,19 +13,23 @@
     <section class="example-section">
       <label>
         Dag:
-        <select class="form-control" id="exampleCategory" required [(ngModel)]="newTask.dayOfWeek">
-          <!--<option></option>-->
+        <!-- <select class="form-control" id="exampleCategory" required [(ngModel)]="newTask.dayOfWeek">
+          <option *ngFor="let category of categoryTypes" [ngValue]="category">{{category.type}}</option>
+        </select> -->
+        <select class="form-control" id="exampleCategory" required [(ngModel)]="selectedDow">
           <option *ngFor="let category of categoryTypes" [ngValue]="category">{{category.type}}</option>
         </select>
         <br>
 
         <!--selectedCategoryType :  {{newTask.dayOfWeek | json}}-->
 
+        selectedCategoryType :  {{selectedDow | json}}
+
         <br>
         <br>
 
         Tijd (hh:mm):
-        <input #time="ngModel" type="text" required pattern="^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$" [(ngModel)]="newTask.datetime">
+        <input #time="ngModel" type="text" required pattern="^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$" [(ngModel)]="newTask.datetimeString">
         <span style="color:red" [hidden]="time.valid || time.pristine">Formaat ongeldig</span>
 
         <br>
