--- a/src/app/manual-override/manual-override.component.html
+++ b/src/app/manual-override/manual-override.component.html
@@ -2,7 +2,7 @@
   <mat-card-content>
     <h2>Huidige instelling aanpassen</h2>
     <section class="example-section">
-    {{time}}
+    Tijd: {{time}}
     </section>
     <section class="example-section">
       Huidige status
