--- a/src/app/schedule-table/schedule-table.component.html
+++ b/src/app/schedule-table/schedule-table.component.html
@@ -6,7 +6,7 @@
     <th></th>
     <th></th>
   </tr>
-  <tr *ngFor="let task of tasks">
+  <tr *ngFor="let task of tasksOrdered()">
     <td>{{task.dow}}</td>
     <td>{{task.datetime | date : 'HH:mm'}}</td>
     <td>{{task.action}}</td>
